<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@color/blue">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/judulMasalah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:text="Permasalahan Kulit Wajah"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_bg"
        android:layout_weight="3"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:rowCount="2"
        android:columnCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:outlineSpotShadowColor="@color/black"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/kusam" />

                <Button
                    android:id="@+id/but1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="130dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/kusam"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="210dp"
                    android:layout_height="160dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="11dp"
                    android:src="@drawable/jerawat" />

                <Button
                    android:id="@+id/but2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="130dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/jerawat"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/flek" />

                <Button
                    android:id="@+id/but3"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="130dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/flek"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/keriput" />

                <Button
                    android:id="@+id/but4"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="130dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/keriput"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>



    </GridLayout>


</LinearLayout>